cleaned up the comments and added some textcells

--- a/SocialJusticeInProgramming.ipynb
+++ b/SocialJusticeInProgramming.ipynb
@@ -11,8 +11,7 @@
     "**Note: The notebook does not claim to fully reflect the complexity of this question. It only elaborates on what the Stackoverflow survey results indicate.*\n",
     "\n",
     "The questions to be answered in this notebook are: \n",
-    "- Q1 To what extent is there equal opportunity in the programming profession? <br> \n",
-    " How well can the salary be predicted on the basis of the starting conditions?\n",
+    "- Q1 Is there equal opportunity in the programming profession? <br> \n",
     "<br><br>\n",
     "- Q2 How does your social environment influence your chances of being successful as a developer? <br>\n",
     "<br><br>\n",
@@ -1506,9 +1505,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most interesting columns in regard to the questions are\n",
-    "<br><br><br>\n",
-    ">Q1: To what extent is there equal opportunity in the programming profession?\n",
+    "The most interesting columns in regard to the questions are:\n",
+    "<br><br>\n",
+    ">Q1: Is there equal opportunity in the programming profession?\n",
     "- **Initial conditons:** Race, HighestEducationParents, Gender\n",
     "- **Partially influenceable conditions:** Country <br>\n",
     "*Note: The country is probably strongly related to ethnicity and needs to be considered in the study.*\n",
@@ -1962,13 +1961,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot only combinations where there are at least 50 survey participants\n",
+    "# Plot only results where there are at least 50 survey participants\n",
     "ethnicity_counts = df_eval[\"Race\"].value_counts()[df_eval[\"Race\"].value_counts() >=50]\n",
     "\n",
-    "# Plot only combinations where there are at least 400 survey participants\n",
+    "# Plot only results where there are at least 400 survey participants\n",
     "country_counts = df_eval[\"Country\"].value_counts()[df_eval[\"Country\"].value_counts() >=400]\n",
     "\n",
-    "# Plot only combinations where there are at least 10 survey participants\n",
+    "# Plot only result where there are at least 10 survey participants\n",
     "gender_counts = df_eval[\"Gender\"].value_counts()[df_eval[\"Gender\"].value_counts()>=10]"
    ]
   },
@@ -2008,7 +2007,7 @@
    "source": [
     "# Default plot for data overview\n",
     "def do_standard_plot(df, title, plot_type, size=[6,6], use_y_grid=False):\n",
-    "    \"\"\"[Takes a df containing a distribution and creates a plot from it.]\n",
+    "    \"\"\"[Takes a df containing a distribution and creates a plot from it]\n",
     "\n",
     "    Args:\n",
     "        df ([pandas.DataFrame]): [df containing a distribution]\n",
@@ -2206,7 +2205,7 @@
    "source": [
     "This should be enough for a first overview.<br>\n",
     "So let's take a look at question number 1: <br>\n",
-    "**Q1 To what extent is there equal opportunity in the programming profession?**<br><br>\n",
+    "**Q1 Is there equal opportunity in the programming profession?**<br><br>\n",
     "*Note: The OverallSatisfaction is introduced as the sum of the job and the career satisfaction*"
    ]
   },
@@ -2470,7 +2469,7 @@
     }
    ],
    "source": [
-    "# Select only ethnicities and countries in focus - wihtout India\n",
+    "# Select only ethnicities and countries in focus - without India\n",
     "countries_in_focus_no_india = countries_in_focus.copy()\n",
     "countries_in_focus_no_india.remove(\"India\")\n",
     "\n",
@@ -2479,6 +2478,13 @@
     "\n",
     "\n",
     "plot_multiple_bar_plot(ethnicity_sf_countries_if_mod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can clearly see that some ethnicities are disadvantaged. The \"Black or of African descent\" group in particular has the lowest or second lowest salary in all countries considered."
    ]
   },
   {
@@ -2534,6 +2540,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can see again that the group \"Black or of African descent\" is clearly disadvantaged. People from Asia also only achieve a low level of overall satisfaction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In order to see which parameters affect general satisfaction and to what extent, <br>\n",
     "the ranges between maximum and minimum satisfaction are stored in a dict."
    ]
@@ -2546,7 +2559,7 @@
    "source": [
     "range_oa_sf = {}\n",
     "def save_range_in_oa_sf(df, parameter):\n",
-    "    \"\"\"[The function saves the range between maximum and minimum OverallSatisfaction depending on the category/parameter in a dict.]\n",
+    "    \"\"\"[The function saves the range between maximum and minimum OverallSatisfaction depending on the category/parameter in a dict]\n",
     "\n",
     "    Args:\n",
     "        df ([pandas.DataFrame]): [A df containing a distribution over the OverallSatisfaction]\n",
@@ -2775,6 +2788,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The chart clearly shows that the salary earned is heavily dependent on the education of the parents."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
@@ -2799,6 +2819,15 @@
     "\n",
     "# Save satisfaction range for HighestEducationParents\n",
     "save_range_in_oa_sf(pe_satifaction, \"HighestEducationParents\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As far as overall satisfaction is concerned, the graph is a little less clear. Nevertheless, we can clearly see that a high level <br>\n",
+    " of overall satisfaction is more likely to be achieved by people whose parents have achieved a high academic degree. The parents of <br>\n",
+    " the three most satisfied groups on average all have an academic degree."
    ]
   },
   {
@@ -2910,6 +2939,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Contrary to what one might expect, men in the developer profession earn the lowest salaries. <br>\n",
+    "The group that does not assign themselves to the genders female or male even achieves the highest salary."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -2937,6 +2974,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When it comes to general job and career satisfaction, the graph is reversed. Here the men are the happiest."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2961,12 +3005,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Overall, we can state that ethnicity has the greatest impact on the level of satisfaction achieved. <br>\n",
+    "As the graphics show, all initial conditions have an impact on salary and satisfaction. <br>\n",
+    "Question Q1 can be clearly answered in the negative. **There is no equal opportunity in the job profile of professional developers.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's continue with question 2: <br>\n",
     "**Q2 How does your social environment influence your chances of being successful as a developer?**<br><br>\n",
     "We have already seen clearly that the parents education not only has an extreme impact on salary, but also on job satisfaction.<br>\n",
     "Now we have to check how the circle of friends affect the success. Here, however, it must be taken into account that a correlation does not necessarily mean a causality.<br>\n",
     "If you are successful as a programmer, you have a lot to do with other developers and the probability is high that you will find new friends among them.<br>\n",
-    "In addition, many friendships are made during an academic career and people with high degrees tend to earn higher incomes."
+    "In addition, many friendships are made during an academic career and in our society people with high degrees tend to earn higher incomes."
    ]
   },
   {
@@ -3125,6 +3178,17 @@
    "source": [
     "Contrary to my original assumption, we can see from the graph that people whose circle of friends includes few developers have the highest salary. <br>\n",
     "The people who mainly surround themselves with developers earn even the lowest salary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With regard to Q2, it can be said that the social environment has a significant impact on success as a programmer. <br>\n",
+    "The parents in particular have a major impact. The higher the educational level of the parents, <br>\n",
+    "the more likely it is to achieve a high salary and the greater the chances of being satisfied in one's job/career.<br>\n",
+    "As far as the circle of friends is concerned, it is advantageous in terms of salary not only to surround oneself<br>\n",
+    "with friends of the same professional orientation. However, this parameter is irrelevant for the level of satisfaction achieved."
    ]
   },
   {
@@ -3485,7 +3549,15 @@
    "metadata": {},
    "source": [
     "On the question of whether diversity is important in the workplace, it appears that people with a clear opinion on this earn the most. <br>\n",
-    "The group that is strongly opposed to diversity has an average income that is about €1500 higher, but is also more than 5% less satisfied."
+    "The group that is strongly opposed to diversity has an average income that is about €1500 higher, but is also more than 5% less satisfied than those for whom diversity is important."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To answer Q3, it is important to note that it is extremely important to be open to different solution approaches when it comes to maximizing salary. <br>\n",
+    "In addition, a clear opinion can help to maximize the salary. It should be taken into account that open people are happier."
    ]
   }
  ],
