added some comments - steps of the data science process

--- a/SocialJusticeInProgramming.ipynb
+++ b/SocialJusticeInProgramming.ipynb
@@ -12,6 +12,7 @@
     "Survey results from Stackoverflow, which are freely accessible at https://insights.stackoverflow.com/survey, are used as the data basis.<br><br>\n",
     "**Note: The notebook does not claim to fully reflect the complexity of this question. It only elaborates on what the Stackoverflow survey results indicate.*\n",
     "\n",
+    "**Framing the Problem** <br>\n",
     "The questions to be answered in this notebook are: \n",
     "- Q1 Is there equal opportunity in the programming profession? <br> \n",
     "<br><br>\n",
@@ -49,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in the data\n",
+    "# Read in the data - gather the data\n",
     "df = pd.read_csv(\"2017survey_results_public.csv\")\n",
     "schema = pd.read_csv(\"2017survey_results_schema.csv\")\n",
     "schema.set_index(\"Column\", inplace=True)"
@@ -1492,7 +1493,7 @@
     }
    ],
    "source": [
-    "# Size of the dataset\n",
+    "# Size of the dataset - assess the data\n",
     "print(\"shape of the data:\", df.shape)\n",
     "print(f\"Survey participants: {df.shape[0]}, Questions asked: {df.shape[1]}\\n\")\n",
     "\n",
@@ -1914,7 +1915,7 @@
     "# We can safely drop rows where all parameters are nan \n",
     "df_filtered.dropna(subset=cat_cols, how=\"all\", inplace=True)\n",
     "\n",
-    "# Build a df containing only rows with the needed evaluation criteria\n",
+    "# Build a df containing only rows with the needed evaluation criteria - clean the data\n",
     "df_eval = df_filtered.dropna(subset=EVALUATION_PARAMETERS, axis=0).copy()\n",
     "\n",
     "# Due to the questions above we are only interested in data from professional developers\n",
@@ -1971,6 +1972,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# analyze the data\n",
     "# Plot only results where there are at least 50 survey participants\n",
     "ethnicity_counts = df_eval[\"Race\"].value_counts()[df_eval[\"Race\"].value_counts() >=50]\n",
     "\n",
@@ -2451,6 +2453,7 @@
     "ethnicity_sf_countries_if = ethnicity_sf_countries[(ethnicity_sf_countries[\"Race\"].isin(ethnicities_in_focus)) & \n",
     "                                                   (ethnicity_sf_countries[\"Country\"].isin(countries_in_focus))]\n",
     "\n",
+    "# visualize results\n",
     "plot_multiple_bar_plot(ethnicity_sf_countries_if)\n"
    ]
   },
